diesel_compile_tests/tests/ui/mysql_does_not_support_offset_without_limit.stderr
error[E0277]: the trait bound `diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>: diesel::query_builder::QueryFragment<diesel::mysql::Mysql>` is not satisfied
  --> $DIR/mysql_does_not_support_offset_without_limit.rs:18:29
   |
18 |     users::table.offset(42).get_result::<(i32, String)>(&connection);
   |                             ^^^^^^^^^^ the trait `diesel::query_builder::QueryFragment<diesel::mysql::Mysql>` is not implemented for `diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<L>, diesel::query_builder::offset_clause::NoOffsetClause> as diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>>
             <diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<L>, diesel::query_builder::offset_clause::OffsetClause<O>> as diesel::query_builder::QueryFragment<diesel::mysql::Mysql>>
             <diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<L>, diesel::query_builder::offset_clause::OffsetClause<O>> as diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>>
             <diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<O>> as diesel::query_builder::QueryFragment<diesel::sqlite::Sqlite>>
           and 4 others
   = note: required because of the requirements on the impl of `diesel::query_builder::QueryFragment<diesel::mysql::Mysql>` for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::LoadQuery<diesel::MysqlConnection, (i32, std::string::String)>` for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>`

error[E0277]: the trait bound `diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'_, diesel::mysql::Mysql>: std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>` is not satisfied
  --> $DIR/mysql_does_not_support_offset_without_limit.rs:20:29
   |
20 |     users::table.offset(42).into_boxed().get_result::<(i32, String)>(&connection);
   |                             ^^^^^^^^^^ the trait `std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>` is not implemented for `diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'_, diesel::mysql::Mysql>`
   |
   = help: the following implementations were found:
             <diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'a, diesel::mysql::Mysql> as std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<L>, diesel::query_builder::offset_clause::NoOffsetClause>>>
             <diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'a, diesel::pg::Pg> as std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<L, O>>>
             <diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'a, diesel::sqlite::Sqlite> as std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::LimitClause<L>, diesel::query_builder::offset_clause::NoOffsetClause>>>
             <diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'a, diesel::sqlite::Sqlite> as std::convert::From<diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::NoOffsetClause>>>
           and 4 others
   = note: required because of the requirements on the impl of `std::convert::Into<diesel::query_builder::limit_offset_clause::BoxedLimitOffsetClause<'_, diesel::mysql::Mysql>>` for `diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>`
   = note: required because of the requirements on the impl of `diesel::query_dsl::boxed_dsl::BoxedDsl<'_, diesel::mysql::Mysql>` for `diesel::query_builder::SelectStatement<users::table, diesel::query_builder::select_clause::DefaultSelectClause, diesel::query_builder::distinct_clause::NoDistinctClause, diesel::query_builder::where_clause::NoWhereClause, diesel::query_builder::order_clause::NoOrderClause, diesel::query_builder::limit_offset_clause::LimitOffsetClause<diesel::query_builder::limit_clause::NoLimitClause, diesel::query_builder::offset_clause::OffsetClause<diesel::expression::bound::Bound<diesel::sql_types::BigInt, i64>>>>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
